--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -128,10 +128,10 @@ jobs:
       fail-fast: false
       matrix:
         flash-attn-version: ["2.8.3"]
-        python-version: ["3.11", "3.12", "3.13"]
-        torch-version: ["2.9.0.dev20250909"]
+        python-version: ["3.12"] #["3.11", "3.12", "3.13"]
+        torch-version: ["2.8.0"] #["2.9.0.dev20250909"]
         # https://developer.nvidia.com/cuda-toolkit-archive
-        cuda-version: ["12.6.3", "12.8.1"]
+        cuda-version: ["12.8.1"] # ["12.6.3", "12.8.1"]
         exclude:
           # torch < 2.2 does not support Python 3.12
           - python-version: "3.12"
