--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,54 +22,54 @@ jobs:
   # #########################################################
   # Linux
   # #########################################################
-  build_wheels_linux:
-    name: Build Linux
-    needs: create_releases
-    strategy:
-      fail-fast: false
-      matrix:
-        flash-attn-version: ["2.8.3"]
-        python-version: ["3.11", "3.12", "3.13"]
-        torch-version: ["2.9.0.dev20250909"]
+  #build_wheels_linux:
+  #  name: Build Linux
+  #  needs: create_releases
+  #  strategy:
+  #    fail-fast: false
+  #    matrix:
+  #      flash-attn-version: ["2.8.3"]
+  #      python-version: ["3.11", "3.12", "3.13"]
+  #      torch-version: ["2.9.0.dev20250909"]
         # https://developer.nvidia.com/cuda-toolkit-archive
-        cuda-version: ["12.6.3", "12.8.1", "12.9.1"]
-        exclude:
+  #      cuda-version: ["12.6.3", "12.8.1", "12.9.1"]
+  #      exclude:
           # torch < 2.2 does not support Python 3.12
-          - python-version: "3.12"
-            torch-version: "2.0.1"
-          - python-version: "3.12"
-            torch-version: "2.1.2"
+  #        - python-version: "3.12"
+  #          torch-version: "2.0.1"
+  #        - python-version: "3.12"
+  #          torch-version: "2.1.2"
           # torch 2.0.1 does not support CUDA 12.x
-          - torch-version: "2.0.1"
-            cuda-version: "12.1.1"
-          - torch-version: "2.0.1"
-            cuda-version: "12.4.1"
-          - torch-version: "2.0.1"
-            cuda-version: "12.6.3"
-          - torch-version: "2.0.1"
-            cuda-version: "12.8.1"
+  #        - torch-version: "2.0.1"
+  #          cuda-version: "12.1.1"
+  #        - torch-version: "2.0.1"
+  #          cuda-version: "12.4.1"
+  #        - torch-version: "2.0.1"
+  #          cuda-version: "12.6.3"
+  #        - torch-version: "2.0.1"
+  #          cuda-version: "12.8.1"
           # torch 2.6.0 does not support CUDA 12.1
-          - torch-version: "2.6.0"
-            cuda-version: "12.1.1"
+  #        - torch-version: "2.6.0"
+  #          cuda-version: "12.1.1"
           # torch 2.7.0 does not support CUDA 12.4
-          - torch-version: "2.7.0"
-            cuda-version: "12.4.1"
+  #        - torch-version: "2.7.0"
+  #          cuda-version: "12.4.1"
           # torch < 2.8 does not support CUDA 12.9
-          - torch-version: "2.5.1"
-            cuda-version: "12.9.1"
-          - torch-version: "2.6.3"
-            cuda-version: "12.9.1"
-          - torch-version: "2.7.1"
-            cuda-version: "12.9.1"
+  #        - torch-version: "2.5.1"
+  #          cuda-version: "12.9.1"
+  #        - torch-version: "2.6.3"
+  #          cuda-version: "12.9.1"
+  #        - torch-version: "2.7.1"
+  #          cuda-version: "12.9.1"
           # flash-attn 2.7.4 does not build in GitHub Hosted Runner
-          - flash-attn-version: "2.7.4"
-    uses: ./.github/workflows/build_linux.yml
-    with:
-      flash-attn-version: ${{ matrix.flash-attn-version }}
-      python-version: ${{ matrix.python-version }}
-      torch-version: ${{ matrix.torch-version }}
-      cuda-version: ${{ matrix.cuda-version }}
-    secrets: inherit
+  #        - flash-attn-version: "2.7.4"
+  #  uses: ./.github/workflows/build_linux.yml
+  #  with:
+  #    flash-attn-version: ${{ matrix.flash-attn-version }}
+  #    python-version: ${{ matrix.python-version }}
+  #    torch-version: ${{ matrix.torch-version }}
+  #    cuda-version: ${{ matrix.cuda-version }}
+  #  secrets: inherit
 
   # build_wheels_linux_self_hosted:
   #   name: Build Linux (self-hosted)
@@ -219,7 +219,7 @@ jobs:
     name: Update Release Notes
     needs:
       #   [build_wheels_linux, build_wheels_linux_self_hosted, build_wheels_windows]
-      [build_wheels_linux, build_wheels_windows]
+      [build_wheels_windows] # [build_wheels_linux, build_wheels_windows]
     permissions:
       contents: write
     if: always()
